correcting mindfulness spacing

--- a/www/css/main-nav.css
+++ b/www/css/main-nav.css
@@ -338,7 +338,7 @@ img.toggle{
     float: left;
     width: 49%;
     margin-bottom: 2%;
-    margin-right: 1%;
+    margin-right: 2%;
     position: relative;
 }
 .exhale-imgs{
